eks-work/ingress-controller.yaml
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: alb
# spec:
#   controller: k8s.io/gateway-ingress
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   namespace: kube-system
#   name: aws-load-balancer-controller
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: aws-load-balancer-controller
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/name: aws-load-balancer-controller
#     spec:
#       containers:
#       - image: docker.io/amazon/aws-alb-ingress-controller:v1.1.1
#         imagePullPolicy: Always
#         name: aws-load-balancer-controller
#         ports:
#         - containerPort: 80
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
#simulate user gateway directions
    - http:
        paths:
        - path: /users
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 8070
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 8070
    #simulate underwriter gateway directions
        - path: /applicants
          pathType: Prefix
          backend:
            service:
              name: underwriter-service
              port:
                number: 8071
        - path: /applications
          pathType: Prefix
          backend:
            service:
              name: underwriter-service
              port:
                number: 8071
    #simulate account gateway directions
        - path: /accounts
          pathType: Prefix
          backend:
            service:
              name: account-service
              port:
                number: 8072
        - path: /members
          pathType: Prefix
          backend:
            service:
              name: account-service
              port:
                number: 8072
    #simulate transaction gateway directions
        - path: /transactions
          pathType: Prefix
          backend:
            service:
              name: transaction-service
              port:
                number: 8073
        - path: /members
          pathType: Prefix
          backend:
            service:
              name: transaction-service
              port:
                number: 8073
        - path: /accounts
          pathType: Prefix
          backend:
            service:
              name: transaction-service
              port:
                number: 8073
    #simulate bank gateway directions
        - path: /members
          pathType: Prefix
          backend:
            service:
              name: bank-service
              port:
                number: 8083
        - path: /branches
          pathType: Prefix
          backend:
            service:
              name: bank-service
              port:
                number: 8083
        - path: /banks
          pathType: Prefix
          backend:
            service:
              name: bank-service
              port:
                number: 8083
